# RangeQueries

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: workflow.yaml
include/: avl_tree.hh  range_query.hh
src/: main.cc
tests/: CMakeLists.txt  test_avl_tree.cc
tests/answ/: 0.ans
